--- a/gpt-dev.ipynb
+++ b/gpt-dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6e0880fe",
    "metadata": {},
    "outputs": [
@@ -14,9 +14,8 @@
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
       "\n",
       "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-      "  0     0    0     0    0     0      0      0 --:--:--  0:00:01 --:--:--     0\n",
-      "  3 1089k    3 40345    0     0  29873      0  0:00:37  0:00:01  0:00:36 29929\n",
-      "100 1089k  100 1089k    0     0   762k      0  0:00:01  0:00:01 --:--:--  763k\n"
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100 1089k  100 1089k    0     0  2227k      0 --:--:-- --:--:-- --:--:-- 2232k\n"
      ]
     }
    ],
@@ -26,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9ed06dd2",
    "metadata": {},
    "outputs": [],
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7f98143f",
    "metadata": {},
    "outputs": [
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "042b5f94",
    "metadata": {},
    "outputs": [
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4703c91c",
    "metadata": {},
    "outputs": [
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "85eb58d5",
    "metadata": {},
    "outputs": [
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "f9f529a3",
    "metadata": {},
    "outputs": [
@@ -185,19 +184,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a58da0c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    " n = int(0.9*len(data))\n",
-    " train_data=data[:n]\n",
-    " val_data=data[n:]"
+    "n = int(0.9*len(data))\n",
+    "train_data=data[:n]\n",
+    "val_data=data[n:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "8de1d04d",
    "metadata": {},
    "outputs": [
@@ -207,7 +206,7 @@
        "tensor([18, 47, 56, 57, 58,  1, 15, 47, 58])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "cd7c0db5",
    "metadata": {},
    "outputs": [
@@ -249,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "4bcb61f8",
    "metadata": {},
    "outputs": [
@@ -337,11 +336,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fd815860",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[24, 43, 58,  5, 57,  1, 46, 43],\n",
+      "        [44, 53, 56,  1, 58, 46, 39, 58],\n",
+      "        [52, 58,  1, 58, 46, 39, 58,  1],\n",
+      "        [25, 17, 27, 10,  0, 21,  1, 54]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(xb)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "dfbc7f45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 65])\n",
+      "tensor(4.8786, grad_fn=<NllLossBackward0>)\n",
+      "\n",
+      "SKIcLT;AcELMoTbvZv C?nq-QE33:CJqkOKH-q;:la!oiywkHjgChzbQ?u!3bLIgwevmyFJGUGp\n",
+      "wnYWmnxKWWev-tDqXErVKLgJ\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.nn import functional as F\n",
+    "torch.manual_seed(1337)\n",
+    "\n",
+    "class BigramLanguageModel(nn.Module):\n",
+    "\n",
+    "    def __init__(self, vocab_size):\n",
+    "        super().__init__()\n",
+    "        # each token directly reads off the logits for the next token from a lookup table\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
+    "\n",
+    "    def forward(self, idx, targets=None):\n",
+    "\n",
+    "        # idx and targets are both (B,T) tensor of integers\n",
+    "        logits = self.token_embedding_table(idx) # (B,T,C)\n",
+    "\n",
+    "        if targets is None:\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            B, T, C = logits.shape\n",
+    "            logits = logits.view(B*T, C)\n",
+    "            targets = targets.view(B*T)\n",
+    "            loss = F.cross_entropy(logits, targets)\n",
+    "\n",
+    "        return logits, loss\n",
+    "\n",
+    "    def generate(self, idx, max_new_tokens):\n",
+    "        # idx is (B, T) array of indices in the current context\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            # get the predictions\n",
+    "            logits, loss = self(idx)\n",
+    "            # focus only on the last time step\n",
+    "            logits = logits[:, -1, :] # becomes (B, C)\n",
+    "            # apply softmax to get probabilities\n",
+    "            probs = F.softmax(logits, dim=-1) # (B, C)\n",
+    "            # sample from the distribution\n",
+    "            idx_next = torch.multinomial(probs, num_samples=1) # (B, 1) Randomly choose next token based on probabilities.\n",
+    "            # append sampled index to the running sequence\n",
+    "            idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)\n",
+    "        return idx\n",
+    "\n",
+    "m = BigramLanguageModel(vocab_size)\n",
+    "logits, loss = m(xb, yb)\n",
+    "print(logits.shape)\n",
+    "print(loss)\n",
+    "\n",
+    "print(decode(m.generate(idx = torch.zeros((1, 1), dtype=torch.long), max_new_tokens=100)[0].tolist()))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e0c81db5",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create a PyTorch optimizer\n",
+    "optimizer = torch.optim.AdamW(m.parameters(), lr=1e-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3eba7e04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.631432294845581\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 32\n",
+    "for steps in range(10000): # increase number of steps for good results...\n",
+    "\n",
+    "    # sample a batch of data\n",
+    "    xb, yb = get_batch('train')\n",
+    "\n",
+    "    # evaluate the loss\n",
+    "    logits, loss = m(xb, yb)\n",
+    "    optimizer.zero_grad(set_to_none=True)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "print(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5b92ecda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Withe Seitowif one d ple be y'sere.\n",
+      "BUtrdearse'store thambr RDWhere wikeacah IRDot ale themyo th anes ouclyodswere thend:\n",
+      "Alled? ou hourthit u ire d cat lothean hind ERo theraje\n",
+      "SAy?\n",
+      "CHeng il, RDothitins Opse he amarereau us, ok, wlirgrero llomeryoflanyopisatoy ls\n",
+      "Andeplilyncoe:\n",
+      "ASofomyot piof thom.\n",
+      "INENo ecke y\n",
+      "And chesthldatire,\n",
+      "Frs! okindge hay VO:\n",
+      "\n",
+      "pre bent y, frew thiriricerdinese I y.\n",
+      "\n",
+      "I ivictl me:\n",
+      "\n",
+      "con ghid.\n",
+      "Anat ad if gio es s fotoffyoubyopr, le thampreve ou te'd t IONCoromeaveall wen IO\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(decode(m.generate(idx = torch.zeros((1, 1), dtype=torch.long), max_new_tokens=500)[0].tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "71103ac6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=\n",
+      "tensor([[1.0000, 0.0000, 0.0000],\n",
+      "        [0.5000, 0.5000, 0.0000],\n",
+      "        [0.3333, 0.3333, 0.3333]])\n",
+      "--\n",
+      "b=\n",
+      "tensor([[2., 7.],\n",
+      "        [6., 4.],\n",
+      "        [6., 5.]])\n",
+      "--\n",
+      "c=\n",
+      "tensor([[2.0000, 7.0000],\n",
+      "        [4.0000, 5.5000],\n",
+      "        [4.6667, 5.3333]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# toy example illustrating how matrix multiplication can be used for a \"weighted aggregation\"\n",
+    "torch.manual_seed(42)\n",
+    "a = torch.tril(torch.ones(3, 3))\n",
+    "a = a / torch.sum(a, 1, keepdim=True)\n",
+    "b = torch.randint(0,10,(3,2)).float()\n",
+    "c = a @ b\n",
+    "print('a=')\n",
+    "print(a)\n",
+    "print('--')\n",
+    "print('b=')\n",
+    "print(b)\n",
+    "print('--')\n",
+    "print('c=')\n",
+    "print(c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "08f30e31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 8, 2])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# consider the following toy example:\n",
+    "\n",
+    "torch.manual_seed(1337)\n",
+    "B,T,C = 4,8,2 # batch, time, channels\n",
+    "x = torch.randn(B,T,C)\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "39471f23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xbow = torch.zeros((B,T,C))\n",
+    "for b in range(B):\n",
+    "    for t in range(T):\n",
+    "        xprev = x[b,:t+1] # (t,C)\n",
+    "        xbow[b,t] = torch.mean(xprev, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9b6f8d71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wei = torch.tril(torch.ones(T, T))\n",
+    "wei = wei / wei.sum(1, keepdim=True)\n",
+    "xbow2 = wei @ x # (B, T, T) @ (B, T, C) ----> (B, T, C)\n",
+    "torch.allclose(xbow, xbow2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "3c5d1a08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "wei = torch.zeros((T,T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "xbow3 = wei @ x\n",
+    "torch.allclose(xbow, xbow3)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4bae3640",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# version 4: self-attention!\n",
+    "torch.manual_seed(1337)\n",
+    "B,T,C = 4,8,32 # batch, time, channels\n",
+    "x = torch.randn(B,T,C)\n",
+    "\n",
+    "# let's see a single Head perform self-attention\n",
+    "head_size = 16\n",
+    "key = nn.Linear(C, head_size, bias=False)#Wk from 3b1b\n",
+    "query = nn.Linear(C, head_size, bias=False)#Wq from 3b1b\n",
+    "value = nn.Linear(C, head_size, bias=False)#Wv from 3b1b\n",
+    "k = key(x)   # (B, T, 16) or K=x⋅Wk​ from 3b1b\n",
+    "q = query(x) # (B, T, 16)\n",
+    "wei =  q @ k.transpose(-2, -1) # (B, T, 16) @ (B, 16, T) ---> (B, T, T) \n",
+    "#-1,-2 is done to flip the columns T and 16 \n",
+    "tril = torch.tril(torch.ones(T, T))\n",
+    "#wei = torch.zeros((T,T))\n",
+    "wei = wei.masked_fill(tril == 0, float('-inf'))\n",
+    "wei = F.softmax(wei, dim=-1)\n",
+    "\n",
+    "v = value(x)\n",
+    "out = wei @ v\n",
+    "#this gets added onto the old embedding\n",
+    "\n",
+    "out.shape"
+   ]
   }
  ],
  "metadata": {
